; ModuleID = '/home/carl/AnghaBench/git/extr_commit-graph.c_bsearch_graph.c'
source_filename = "/home/carl/AnghaBench/git/extr_commit-graph.c_bsearch_graph.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.commit_graph = type { i32, i32, i32 }
%struct.object_id = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.commit_graph*, %struct.object_id*, i32*)* @bsearch_graph to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bsearch_graph(%struct.commit_graph* %0, %struct.object_id* %1, i32* %2) #0 {
  %4 = alloca %struct.commit_graph*, align 8
  %5 = alloca %struct.object_id*, align 8
  %6 = alloca i32*, align 8
  store %struct.commit_graph* %0, %struct.commit_graph** %4, align 8
  store %struct.object_id* %1, %struct.object_id** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load %struct.object_id*, %struct.object_id** %5, align 8
  %8 = getelementptr inbounds %struct.object_id, %struct.object_id* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.commit_graph*, %struct.commit_graph** %4, align 8
  %11 = getelementptr inbounds %struct.commit_graph, %struct.commit_graph* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.commit_graph*, %struct.commit_graph** %4, align 8
  %14 = getelementptr inbounds %struct.commit_graph, %struct.commit_graph* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.commit_graph*, %struct.commit_graph** %4, align 8
  %17 = getelementptr inbounds %struct.commit_graph, %struct.commit_graph* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32*, i32** %6, align 8
  %20 = call i32 @bsearch_hash(i32 %9, i32 %12, i32 %15, i32 %18, i32* %19)
  ret i32 %20
}

declare dso_local i32 @bsearch_hash(i32, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
